--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,7 +312,7 @@ header img {
 .logo {
     position: absolute;
     left: 50%;
-    top: 12%;
+    top: 13%;
     transform: translateX(-50%);
 }
 
@@ -1252,7 +1252,7 @@ input[type="email"] {
 }
 
 input::placeholder {
-    opacity: 0.7;
+    opacity: 0.9;
     font-size: 14px;
 }
 
@@ -1412,14 +1412,13 @@ h2 {
 }
 
 .search-input::placeholder {
-    color: black; /* Белый цвет с минимальной прозрачностью */
-    opacity: 1; /* Убираем прозрачность */
+    color: black;
+    opacity: 1;
 }
 
 .search-results {
     position: absolute;
     background: white;
-    /* border: 1px solid #ddd; */
     width: 100%;
     max-height: 200px;
     overflow-y: auto;
@@ -1429,7 +1428,6 @@ h2 {
 
 .search-results div {
     padding: 10px;
-    /* border-bottom: 1px solid #ddd; */
     cursor: pointer;
 }
 
