--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,42 +320,33 @@ header img {
     height: 150%;
 }
 
-.indeximg {
-    position: absolute;
-    top: -100px;
-    left: 0;
-    width: 100%;
-    height: 115vh;
-    object-fit: cover;
-    object-position: top;
-    z-index: -5;
-}
 
 @media (max-width: 768px) {
-    .indeximg {
-        content: url('/img/index-mobile.webp');
-        position: absolute;
-        top: 0px;
-        left: 0;
-        width: 100%;
+    .products {
+        margin-top: -50px;
+        overflow: auto;
     }
-}
 
-.category {
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
+    header {
+        height: 80px;
+    }
+
+    .category {
+        display: none;
+    }
+
+    .products {
+        width: 90%;
+        margin-top: -50px;
+    }
 }
 
 .category-item {
     position: relative;
     display: inline-block;
     text-align: center;
-    width: 230px;
-    height: 230px;
+    width: 30vh;
+    height: 30vh;
     border-radius: 50%;
     overflow: hidden;
     text-decoration: none;
@@ -366,8 +357,8 @@ header img {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 110%;
-    height: 110%;
+    width: 100%;
+    height: 100%;
     transform: translate(-50%, -50%) scale(1);
     object-fit: cover;
     transition: transform 0.3s ease;
